--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -8,6 +8,9 @@
     color: #fff;
     margin-left: -250px;
     transition: all 0.5s;
+    position: fixed;
+    height: 100vh;
+    z-index: 9999;
   }
   
   .sidebar.is-open {
