--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ a:focus {
 ----------------------------------------------------- */
 .content {
   padding: 20px;
-  margin-left:250px;
+  margin-left:0;
   height: 100vh;
 }
 
@@ -59,3 +59,5 @@ a:focus {
         left: 68%;
     }
 }
+
+.scroll-y {max-height:calc(100vh - 150px); overflow-y:scroll}
