--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,17 @@
+@import "https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700";
 .App {
     display: flex;
     width: 100%;
     align-items: stretch;
 }
 
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
 *, *::before, *::after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     background: #fafafa;
    
 }
@@ -27,6 +28,7 @@ a:focus {
 .align-text-right {
   text-align: right
 }
+
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
@@ -66,3 +68,31 @@ a:focus {
 .scroll-y {max-height:calc(100vh - 150px); overflow-y:scroll}
 .list-group-item:hover {cursor: pointer;}
 
+.prettybox {
+  width:98%;
+  margin: 1%;
+  background: #fff;
+  border-radius: 3px;
+  padding: 60px 20px 20px 20px;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(207,203,207,1);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(207,203,207,1);
+  box-shadow: 0px 0px 5px 0px rgba(207,203,207,1);
+  position: relative;
+  }
+  .prettybox .header-box {
+    width: 90%;
+    margin-left: 1%;
+    padding: 2.5%;
+    background: rgba(23,162,184,1);
+    background: -moz-linear-gradient(left, rgba(23,162,184,1) 0%, rgba(74,184,201,1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(23,162,184,1)), color-stop(100%, rgba(74,184,201,1)));
+    background: -webkit-linear-gradient(left, rgba(23,162,184,1) 0%, rgba(74,184,201,1) 100%);
+    background: -o-linear-gradient(left, rgba(23,162,184,1) 0%, rgba(74,184,201,1) 100%);
+    background: -ms-linear-gradient(left, rgba(23,162,184,1) 0%, rgba(74,184,201,1) 100%);
+    background: linear-gradient(to right, rgba(23,162,184,1) 0%, rgba(74,184,201,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#17a2b8', endColorstr='#4ab8c9', GradientType=1 );
+    color: #fff;
+    border-radius: 5px;
+    position: absolute;
+    top: -30px
+  }
