--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,24 @@
     align-items: stretch;
 }
 
-
-*, *::before, *::after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(255, 0, 0, 0.8);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
+
+*,
+*::before,
+*::after {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Quicksand', sans-serif;
     background: #fafafa;
-   
 }
-
 
 a,
 a:hover,
@@ -26,38 +33,36 @@ a:focus {
 }
 
 .align-text-right {
-  text-align: right
+    text-align: right
 }
+
 
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
+
 .content {
-  padding: 20px;
-  margin-left:0;
-  height: 100vh;
+    padding: 20px;
+    margin-left: 0;
+    height: 100vh;
 }
 
 @media only screen and (max-width: 500px) {
     body {
-      overflow:  hidden;
+        overflow: hidden;
     }
-
     .content.is-open {
-      margin-left: 100%;
+        margin-left: 100%;
     }
-
     .sidebar.is-open {
-      min-width: 100%;
-      max-width: 100%;
-      margin-left: 0;
-      transition: all 0.5s, height 0s;
+        min-width: 100%;
+        max-width: 100%;
+        margin-left: 0;
+        transition: all 0.5s, height 0s;
     }
-
-    .sidebar.is-open > .sidebar-header span{
-      display: unset;
+    .sidebar.is-open>.sidebar-header span {
+        display: unset;
     }
-
     li a.dropdown-toggle::after {
         display: inline-block;
         position: relative;
@@ -65,34 +70,45 @@ a:focus {
     }
 }
 
-.scroll-y {max-height:calc(100vh - 350px); overflow-y:scroll}
-.list-group-item:hover {cursor: pointer;}
+.scroll-y {
+    max-height: calc(100vh - 350px);
+    overflow-y: scroll
+}
+
+.list-group-item:hover {
+    cursor: pointer;
+}
+
+.list-group-item {
+    padding: .95rem 1.25rem 0 1.25rem;
+}
 
 .prettybox {
-  width:98%;
-  margin: 1%;
-  background: #fff;
-  border-radius: 3px;
-  padding: 60px 20px 20px 20px;
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(207,203,207,1);
-  -moz-box-shadow: 0px 0px 5px 0px rgba(207,203,207,1);
-  box-shadow: 0px 0px 5px 0px rgba(207,203,207,1);
-  position: relative;
-  }
-  .prettybox .header-box {
+    width: 98%;
+    margin: 1%;
+    background: #fff;
+    border-radius: 3px;
+    padding: 60px 20px 20px 20px;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(207, 203, 207, 1);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(207, 203, 207, 1);
+    box-shadow: 0px 0px 5px 0px rgba(207, 203, 207, 1);
+    position: relative;
+}
+
+.prettybox .header-box {
     width: 90%;
     margin-left: 1%;
     padding: 2.5%;
-    background: rgba(23,162,184,1);
-    background: -moz-linear-gradient(left, rgba(23,162,184,1) 0%, rgba(74,184,201,1) 100%);
-    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(23,162,184,1)), color-stop(100%, rgba(74,184,201,1)));
-    background: -webkit-linear-gradient(left, rgba(23,162,184,1) 0%, rgba(74,184,201,1) 100%);
-    background: -o-linear-gradient(left, rgba(23,162,184,1) 0%, rgba(74,184,201,1) 100%);
-    background: -ms-linear-gradient(left, rgba(23,162,184,1) 0%, rgba(74,184,201,1) 100%);
-    background: linear-gradient(to right, rgba(23,162,184,1) 0%, rgba(74,184,201,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#17a2b8', endColorstr='#4ab8c9', GradientType=1 );
+    background: rgba(23, 162, 184, 1);
+    background: -moz-linear-gradient(left, rgba(23, 162, 184, 1) 0%, rgba(74, 184, 201, 1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(23, 162, 184, 1)), color-stop(100%, rgba(74, 184, 201, 1)));
+    background: -webkit-linear-gradient(left, rgba(23, 162, 184, 1) 0%, rgba(74, 184, 201, 1) 100%);
+    background: -o-linear-gradient(left, rgba(23, 162, 184, 1) 0%, rgba(74, 184, 201, 1) 100%);
+    background: -ms-linear-gradient(left, rgba(23, 162, 184, 1) 0%, rgba(74, 184, 201, 1) 100%);
+    background: linear-gradient(to right, rgba(23, 162, 184, 1) 0%, rgba(74, 184, 201, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#17a2b8', endColorstr='#4ab8c9', GradientType=1);
     color: #fff;
     border-radius: 5px;
     position: absolute;
     top: -30px
-  }
+}
