--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,13 @@ a:focus {
     position: absolute;
     top: -30px
 }
+.pull-left {
+    float: left;
+}
+.pull-right {
+    float: right;
+}
+.buttonGroup {
+    width: 100%;
+    padding-bottom: 40px 
+}
